--- a/TDD/src/app/app.component.html
+++ b/TDD/src/app/app.component.html
@@ -50,7 +50,7 @@
 
 <!-- <app-integration-unit-testing></app-integration-unit-testing> -->
 
-<h1>Curso de Testes Unitários com Angular / Jasmine e Karma!</h1>
+<h1>Curso de Testes Unitários com Angular / Jasmine e Karma!!</h1>
 
 <!-- <app-menu-dropdown
   [items]="menuItems" label="Menu" (selected)="onMenuItemSelected($event)">
